# jira-bot

./: .env  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt  settings.toml
jira_bot/: __main__.py  commands.py  jira_manager.py  utils.py
jira_bot/config/: ioc.py  settings.py
jira_bot/filters/: supportedtypes.py
jira_bot/handlers/: __init__.py  admin.py  message_edit.py  ticket.py  unsupported_reply.py  user.py
jira_bot/middlewares/: throttling.py
